--- a/templates/crear_cuenta.html
+++ b/templates/crear_cuenta.html
@@ -19,17 +19,18 @@
         <a href="/" class="ancle-return-text">Volver al inicio</a>
         <picture></picture>
 
-        <form action="">
+        <form method="POST">
+            {% csrf_token %}
             <section action="" class="section-izquierda">
 
                 <label for="nombre" class="label-izquierda label-primero">Nombre (s)</label>
-                <input type="text" id="nombre" name="nombre" class="input-izquierda input-primero" placeholder="Andrés" required>
+                <input type="text" id="nombre" name="firstname" class="input-izquierda input-primero" placeholder="Nombre" required>
 
                 <label for="apellido" class="label-izquierda label-segundo">Apellido (s)</label>
-                <input type="text" id="apellido" name="apellido" class="input-izquierda input-segundo" placeholder="Guzmán" required>
+                <input type="text" id="apellido" name="lastname" class="input-izquierda input-segundo" placeholder="Apellido" required>
 
                 <label for="pais" class="label-izquierda label-tercero label-pais">País</label>
-                <input list="paises" id="pais" name="pais" class="input-izquierda input-tercero" placeholder="Colombia" required>
+                <input list="paises" id="pais" name="pais" class="input-izquierda input-tercero" placeholder="País" required>
                 <datalist id="paises">
                     <option value="Colombia"></option>
                     <option value="Australia"></option>
@@ -48,7 +49,7 @@
             <section class="section-centro">
 
                 <label for="tipo_documento" class="label-centro label-primero">Tipo de documento</label>
-                <input list="documentos" id="tipo_documento" name="tipo_documento" class="input-centro input-primero" placeholder="CC" required>
+                <input list="documentos" id="tipo_documento" name="tipodocumento" class="input-centro input-primero" placeholder="CC" required>
                 <datalist id="documentos">
                     <option value="CC">Cédula de ciudadanía</option>
                     <option value="CE">Cédula de extranjería</option>
@@ -56,26 +57,26 @@
                 </datalist>
 
                 <label for="numero_documento" class="label-centro label-segundo label-numero_documento">Número de documento</label>
-                <input type="number" id="numero_documento" name="numero_documento" class="input-centro input-segundo" autocomplete="cc-number" placeholder="5252525252" required>
+                <input type="number" id="numero_documento" name="documento" class="input-centro input-segundo" autocomplete="cc-number" placeholder="5252525252" required>
 
                 <label for="fecha_expedicion" class="label-centro label-tercero">Fecha de expedición</label>
-                <input type="date" id="fecha_expedicion" name="fecha_expedicion" autocomplete="cc-exp" class="input-centro input-tercero" required>
+                <input type="date" id="fecha_expedicion" name="fechaexpedicion" autocomplete="cc-exp" class="input-centro input-tercero" required>
 
             </section>
 
             <section class="section-derecha">
 
                 <label for="correo" class="label-derecha label-primero">Correo</label>
-                <input type="email" id="correo" name="correo" class="input-derecha input-primero" placeholder="Usuario@example.com" required>
+                <input type="email" id="correo" name="email"class="input-derecha input-primero" placeholder="Usuario@example.com" required>
 
                 <label for="contrasena" class="label-derecha label-segundo">Contraseña</label>
-                <input type="password" id="contrasena" name="contrasena" placeholder="**********" class="input-derecha input-segundo" required>
+                <input type="password" id="contrasena" name="password" placeholder="**********" class="input-derecha input-segundo" required>
 
                 <label for="celular" class="label-derecha label-tercero">Celular</label>
                 <input type="number" id="celular" name="celular" class="input-derecha input-tercero" placeholder="3333333333" required>
 
                 <label for="moneda" class="label-derecha label-cuarto">Moneda local</label>
-                <input list="monedas" id="moneda" name="moneda_local" class="input-derecha input-cuarto" placeholder="COP" required>
+                <input list="monedas" id="moneda" name="moneda" class="input-derecha input-cuarto" placeholder="COP" required>
                 <datalist id="monedas">
                     <option value="COP">Peso colombiano</option>
                     <option value="AUD">Dólar australiano</option>
@@ -85,9 +86,7 @@
 
             </section>
 
-            <button type="submit">
-                Crear cuenta
-            </button>
+            <input type="submit" value="crearcuenta" />
 
         </form>
 
