Template agregar destinatario

--- a/templates/crear_cuenta.html
+++ b/templates/crear_cuenta.html
@@ -86,7 +86,7 @@
 
             </section>
 
-            <input type="submit" value="crearcuenta" />
+            <input type="submit" value="crearcuenta" class="submit-button"/>
 
         </form>
 
