Template Consultar Lista Monedas

--- a/templates/consultar_lista_monedas.html
+++ b/templates/consultar_lista_monedas.html
@@ -1,3 +1,4 @@
+{%load static%}
 <!DOCTYPE html>
 <html>
 
@@ -6,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="css/consultar_lista_monedas.css">
+    <link rel="stylesheet" href="{% static 'css/consultar_lista_monedas.css' %}">
     <title>Lista monedas</title>
-    <link rel="icon" href="imgs/logo-solo.ico">
+    <link rel="icon" href="{% static 'imgs/logo-solo.ico' %}">
 </head>
 
 <body>
