--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     <main>
         <picture></picture>
 
-        <a href="iniciar_sesion.html" class="iniciar_sesion_button">
+        <a href="{% url 'iniciar_sesion' %}" class="iniciar_sesion_button">
             Iniciar Sesión
         </a>
 
