--- a/templates/iniciar_sesion.html
+++ b/templates/iniciar_sesion.html
@@ -16,21 +16,20 @@
     <main>
         <picture></picture>
 
-        <form action="">
+        <form method="POST">
+            {% csrf_token %}
 
             <label for="correo" class="label-correo">Correo</label>
-            <input type="email" id="correo" name="correo" placeholder="usuario@example.com">
+            <input type="email" id="correo" name="email" placeholder="usuario@example.com">
 
             <label for="contrasena" class="label-contrasena">Contraseña</label>
-            <input type="password" id="contrasena" name="contrasena" placeholder="******">
+            <input type="password" id="contrasena" name="password" placeholder="******">
 
             <a href="/" class="ancle1">¿Has olvidado tu contraseña?</a>
 
             <a href="crear_cuenta.html" class="ancle2">¿Aún no tienes una cuenta?</a>
 
-            <button type="submit">
-                Iniciar sesión
-            </button>
+            <input type="submit" value="IniciarSesion" class="submit-button"/>
 
         </form>
 
