--- a/templates/inicio_cliente.html
+++ b/templates/inicio_cliente.html
@@ -40,6 +40,7 @@
         </section>
         <section class="section-saldo section-derecha">
             <p class="p-mensajes">Saldo</p>
+            <input type="submit" value="ConsultarSaldo" class="submit-button"/>
         </section>
     </main>
 
