Correcion Inicio Sesion, Vista Saldo, Solucion Entorno Virtual

--- a/templates/inicio_cliente.html
+++ b/templates/inicio_cliente.html
@@ -40,7 +40,8 @@
         </section>
         <section class="section-saldo section-derecha">
             <p class="p-mensajes">Saldo</p>
-            <input type="submit" value="ConsultarSaldo" class="submit-button"/>
+            <br><br><br><br><br><br><br>
+            <p class="p-mensajes">{{user_data.dinero}}</p>
         </section>
     </main>
 
