--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
             Iniciar Sesión
         </a>
 
-        <a href="crear_cuenta.html" class="crear_cuenta_button">
+        <a href="{% url 'CrearCuenta' %}" class="crear_cuenta_button">
             Crear cuenta
         </a>
     </main>
