--- a/trukea/static/css/agregar_moneda_plataforma.css
+++ b/trukea/static/css/agregar_moneda_plataforma.css
@@ -233,7 +233,7 @@ input[type=number]::-webkit-outer-spin-button {
     left: 660px;
 }
 
-button {
+.submit-button {
     cursor: pointer;
     width: 271px;
     top: 260px;
