--- a/templates/crear_cuenta.html
+++ b/templates/crear_cuenta.html
@@ -15,8 +15,8 @@
 <body>
 
     <main>
-        <a href="/" class="ancle-return-arrow"></a>
-        <a href="/" class="ancle-return-text">Volver al inicio</a>
+        <a href="{% url 'trukea' %}" class="ancle-return-arrow"></a>
+        <a href="{% url 'trukea' %}" class="ancle-return-text">Volver al inicio</a>
         <picture></picture>
 
         <form method="POST">
