--- a/templates/agregar_moneda_plataforma.html
+++ b/templates/agregar_moneda_plataforma.html
@@ -1,6 +1,6 @@
 {%load static%}
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="{% static 'css/agregar_moneda_plataforma.css' %}">
     <title>Agregar destinatario</title>
-    <link rel="icon" href="imgs/logo-solo.ico">
+    <link rel="icon" href="{% static 'imgs/logo-solo.ico' %}">
 </head>
 
 <body>
@@ -49,11 +49,7 @@
             </form>
 
         </section>
-
-
-
     </main>
-
 
 </body>
 
